[package]
name = "cargo-groups"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Nicholas Yang"]
description = "Run cargo commands on a groups of crates in a workspace"
homepage = "https://github.com/nicholaslyang/cargo-groups"
repository = "https://github.com/nicholaslyang/cargo-groups"
keywords = ["cargo", "workspace", "groups", "crates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
cargo_metadata = "0.15.4"
clap = { version = "4.3.2", features = ["derive"] }
clap-cargo = "0.10.0"
colored = "2.0.0"
globset = "0.4.10"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
which = "4.4.0"
