
# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"

[package]
name = "cargo-groups"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["Nicholas Yang"]
description = "Run cargo commands on a groups of crates in a workspace"
homepage = "https://github.com/nicholaslyang/cargo-groups"
repository = "https://github.com/nicholaslyang/cargo-groups"
keywords = ["cargo", "workspace", "groups", "crates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
cargo_metadata = "0.15.4"
clap = { version = "4.3.2", features = ["derive"] }
clap-cargo = "0.10.0"
colored = "2.0.0"
globset = "0.4.10"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
which = "4.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
